visual updates (experimental font); Job deletion error fix

--- a/app/yardWrk/accounts/templates/accounts/profile.html
+++ b/app/yardWrk/accounts/templates/accounts/profile.html
@@ -87,7 +87,7 @@
                             </div>
                             <div class="col">
                                 <div class="btn-group">
-                                    <input type="submit" name="add" value="Add" class="btn btn-success">
+                                    <input type="submit" name="add" value="Add" class="btn btn-secondary">
                                     <input type="submit" name="withdraw" value="Withdraw" class="btn btn-dark">
                                 </div>
                             </div>
