--- a/app/yardWrk/accounts/templates/accounts/base.html
+++ b/app/yardWrk/accounts/templates/accounts/base.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@300;400;500&family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://use.typekit.net/hps2gre.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title> yardwrk - {% block title %} Base Template {% endblock %}</title>
