--- a/app/yardWrk/accounts/templates/accounts/login.html
+++ b/app/yardWrk/accounts/templates/accounts/login.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@300;400;500&family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://use.typekit.net/hps2gre.css">
+
     <style>
         .gradient-custom {
             background: #093028;  /* fallback for old browsers */
@@ -19,8 +21,9 @@
         }
 
         .logo {
-            font-family: 'Inconsolata', monospace;
-            font-family: 'Athiti', sans-serif;
+            font-family: cubano, sans-serif;
+            font-weight: 400;
+            font-style: normal;
             letter-spacing: 4px;
             font-weight: 400;
             font-size: 48px;
