--- a/app/yardWrk/yardSite/static/yardSite/base.css
+++ b/app/yardWrk/yardSite/static/yardSite/base.css
@@ -1,6 +1,15 @@
 * {
+    font-family: cubano, sans-serif;
+    font-weight: 400;
+    font-style: normal;
     margin: 0px;
     padding: 0px;
+}
+
+p, input, .btn {
+    font-family: sofia-pro, sans-serif!important;
+    font-weight: 400!important;
+    font-style: normal!important;
 }
 
 .main {
@@ -14,10 +23,7 @@
 }
 
 .nav-link {
-    font-family: 'Inconsolata', monospace;
-    font-family: 'Athiti', sans-serif;
     letter-spacing: 2px;
-    font-weight: 400;
     font-size: 16px;
     margin: 5px;
     color: #fff!important;
@@ -35,14 +41,10 @@
 }
 
 .nav-link:hover {
-    font-weight: 500;
     border-bottom: 1px solid #fff;
 }
 
 .navbar-brand {
-    font-family: 'Inconsolata', monospace;
-    font-family: 'Athiti', sans-serif;
-    font-weight: 500;
     font-size: 48px!important;
     margin-left: 20px;
 }
@@ -50,6 +52,5 @@
 @media only screen and (max-width: 1000px) {
     .nav-link:hover {
         border-bottom: none!important;
-        font-weight: 500;
     }
 }
