--- a/app/yardWrk/yardSite/templates/yardSite/home.html
+++ b/app/yardWrk/yardSite/templates/yardSite/home.html
@@ -8,9 +8,9 @@
             <div class="col-10">
                 <h1>Available Jobs - {{ queryset.count }}</h1>
                 <hr class="mt-0 mb-4">
-                <div class="row row-cols-1 row-cols-md-6 g-4">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5">
                     {% for job in queryset %}
-                        <div class="col">
+                        <div class="col mb-2">
                             <div class="card">
                                 <div class="card-header">{{ job.job_type }}</div>
                                 <div class="card-body">
