--- a/app/yardWrk/owner/templates/owner/owner-add-del-jobs.html
+++ b/app/yardWrk/owner/templates/owner/owner-add-del-jobs.html
@@ -1,6 +1,6 @@
 {% extends "yardSite/base.html" %}
 
-{% block title %} Create Job Post {% endblock %}
+{% block title %} All Posted Jobs {% endblock %}
 
 {% load crispy_forms_tags %}
 
