--- a/app/yardWrk/owner/templates/owner/owner-job-details.html
+++ b/app/yardWrk/owner/templates/owner/owner-job-details.html
@@ -1,6 +1,6 @@
 {% extends "yardSite/base.html" %}
 
-{% block title %} Create Job Post {% endblock %}
+{% block title %} Job Details (For Admin) {% endblock %}
 
 {% load crispy_forms_tags %}
 
