--- a/app/yardWrk/owner/templates/owner/owner-add-del-jobs.html
+++ b/app/yardWrk/owner/templates/owner/owner-add-del-jobs.html
@@ -16,7 +16,7 @@
                             <div class="card-header">{{ job.job_type }}</div>
                             <div class="card-body">
                                 <h5 class="card-title">${{ job.cash_reward }}</h5>
-                                <p class="card-text">{{ job.description }}</p>
+                                <p class="card-text">{{ job.preview_description }}</p>
                             </div>
                             <a href="{% url 'owner:owner_job_details' job.id %}"><button class="btn btn-outline-primary w-100" href="">Details</button></a>
                         </div>
@@ -26,8 +26,8 @@
         {% else %}
             <p>No Jobs have been posted</p>
         {% endif %}
-        <a href="{% url 'yardSite:createJob' %}">
+        <!-- <a href="{% url 'yardSite:createJob' %}">
             <button class="mt-2 btn btn-primary">Create Job (Not Yet Implemented)</button>
-        </a>
+        </a> -->
     </div>
 {% endblock %}
