--- a/app/yardWrk/owner/templates/owner/owner-dash.html
+++ b/app/yardWrk/owner/templates/owner/owner-dash.html
@@ -1,27 +1,29 @@
 {% extends "yardSite/base.html" %}
 
-{% block title %} Create Job Post {% endblock %}
+{% block title %} Owner {% endblock %}
 
 {% load crispy_forms_tags %}
 
 {% block content %}
 
-<div>
+<div class="container-fluid">
     <h1 class="mt-2">Owner Dashboard</h1>
-    <hr class="mt-0 mb-4">
-    
-    <a href="{% url 'owner:owner_add_delete_jobs' %}">
-        <button class="mt-2 btn btn-primary">See all jobs</button>
-    </a>
+    <hr class="mt-0 mb-3">
+
+    <div class="btn-group w-100">
+        <a href="{% url 'owner:owner_add_delete_jobs' %}" class="fs-5 btn btn-outline-primary">
+            See all jobs
+        </a>
+        <a href="{% url 'owner:owner_edit_account_balances' %}" class="fs-5 btn btn-outline-primary">
+            Edit Account Balances
+        </a>
+    </div>
 </div>
 
 <div>
-    <a href="{% url 'owner:owner_edit_account_balances' %}">
-        <button class="mt-2 btn btn-primary">Edit Account Balances</button>
-    </a>
 </div>
 
-<div>
+<div class="container-fluid">
     <h1 class="mt-2">Current Job Types</h1>
     <hr class="mt-0 mb-4">
     {% if types %}
@@ -44,7 +46,7 @@
 
 <div>
     <a href="{% url 'owner:owner_add_job_type' %}">
-        <button class="mt-2 btn btn-primary">Add New Job Type</button>
+        <button class="mt-2 btn btn-primary">Create New Job Type</button>
     </a>
 </div>
 {% endblock %}
