Got videos organized; adding info file; fixed edit review title

--- a/app/yardWrk/yardSite/templates/yardSite/editReview.html
+++ b/app/yardWrk/yardSite/templates/yardSite/editReview.html
@@ -1,6 +1,6 @@
 {% extends "yardSite/base.html" %}
 
-{% block title %} Edit Job Post {% endblock %}
+{% block title %} Edit Review {% endblock %}
 
 {% load crispy_forms_tags %}
 
