--- a/app/yardWrk/yardSite/templates/yardSite/create-review-post.html
+++ b/app/yardWrk/yardSite/templates/yardSite/create-review-post.html
@@ -10,7 +10,7 @@
     <form method="post" class="form-group">
         {% csrf_token %}
         {{ form|crispy }}
-	    <button type="submit" class="mt-2 btn btn-outline-primary">Submit Changes</button>
+	    <button type="submit" class="mt-2 btn btn-outline-primary">Post Review</button>
         <button class="mt-2 btn btn-outline-danger" onclick="history.back()">Cancel</button>
     </form>
 {%endblock%}
