--- a/app/yardWrk/yardSite/templates/yardSite/home.html
+++ b/app/yardWrk/yardSite/templates/yardSite/home.html
@@ -6,7 +6,10 @@
     <div class="container-fluid vh-100 w-100">
         <div class="row vh-100">
             <div class="col-10">
-                <h1>Available Jobs - {{ queryset.count }}</h1>
+                <h1>
+                    Available Jobs - {{ queryset.count }}
+                    <a href="{% url 'yardSite:createJob' %}" class="float-end btn btn-outline-dark">Create Job Post</a>
+                </h1>
                 <hr class="mt-0 mb-4">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5">
                     {% for job in queryset %}
