--- a/app/yardWrk/owner/templates/owner/owner-dash.html
+++ b/app/yardWrk/owner/templates/owner/owner-dash.html
@@ -12,7 +12,7 @@
 
     <div class="btn-group w-100">
         <a href="{% url 'owner:owner_add_delete_jobs' %}" class="fs-5 btn btn-outline-primary">
-            See all jobs
+            See All Jobs
         </a>
         <a href="{% url 'owner:owner_edit_account_balances' %}" class="fs-5 btn btn-outline-primary">
             Edit Account Balances
